@@ -8,7 +8,7 @@ plugins {
 
     id 'com.github.andygoossens.modernizer' version '1.10.0'
 
-    id 'me.champeau.jmh' version '0.7.2'
+    id 'me.champeau.jmh' version '0.7.3'
 
     // This is https://github.com/java9-modularity/gradle-modules-plugin/pull/282
     id 'com.github.koppor.gradle-modules-plugin' version 'v1.8.15-cmd-1'
@@ -29,7 +29,7 @@ plugins {
 
     id 'idea'
 
-    id 'org.openrewrite.rewrite' version '7.0.0'
+    id 'org.openrewrite.rewrite' version '7.2.0'
 
     id "org.itsallcode.openfasttrace" version "3.0.1"
 }
@@ -100,7 +100,9 @@ application {
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref',
 
         '--add-opens=javafx.base/javafx.collections=org.jabref',
-        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref'
+        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref',
+
+        '--enable-native-access=javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core'
     ]
 }
 
@@ -149,7 +151,7 @@ dependencyLocking {
 }
 
 javafx {
-    version = "23.0.1"
+    version = "24"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
 
@@ -182,10 +184,10 @@ dependencies {
     implementation "org.apache.lucene:lucene-analysis-common:$luceneVersion"
     implementation "org.apache.lucene:lucene-highlighter:$luceneVersion"
 
-    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.12.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.13.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.0'
-    implementation 'commons-logging:commons-logging:1.3.4'
+    implementation 'commons-logging:commons-logging:1.3.5'
     implementation 'com.h2database:h2-mvstore:2.3.232'
 
     // required for reading write-protected PDFs - see https://github.com/JabRef/jabref/pull/942#issuecomment-209252635
@@ -194,8 +196,8 @@ dependencies {
     implementation 'commons-cli:commons-cli:1.9.0'
 
     // region: LibreOffice
-    implementation 'org.libreoffice:unoloader:24.2.3'
-    implementation 'org.libreoffice:libreoffice:24.2.3'
+    implementation 'org.libreoffice:unoloader:24.8.4'
+    implementation 'org.libreoffice:libreoffice:24.8.4'
     // Required for ID generation
     implementation 'io.github.thibaultmeyer:cuid:2.0.3'
     // endregion
@@ -209,7 +211,7 @@ dependencies {
 
     implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.1.0.202411261347-r'
 
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.2'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.18.2'
 
     implementation 'com.fasterxml:aalto-xml:1.3.3'
@@ -247,7 +249,7 @@ dependencies {
     }
     implementation 'org.fxmisc.flowless:flowless:0.7.3'
     implementation 'org.fxmisc.richtext:richtextfx:0.11.4'
-    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.83.0') {
+    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.95.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
         exclude group: 'org.apache.commons.validator'
@@ -268,19 +270,19 @@ dependencies {
     implementation 'org.controlsfx:controlsfx:11.2.1'
 
     // region HTTP clients
-    implementation 'org.jsoup:jsoup:1.18.3'
+    implementation 'org.jsoup:jsoup:1.19.1'
     implementation 'com.konghq:unirest-java-core:4.4.5'
     implementation 'com.konghq:unirest-modules-gson:4.4.5'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.2'
     // endregion
 
-    implementation 'org.slf4j:slf4j-api:2.0.16'
+    implementation 'org.slf4j:slf4j-api:2.0.17'
     implementation 'org.tinylog:tinylog-api:2.7.0'
     implementation 'org.tinylog:slf4j-tinylog:2.7.0'
     implementation 'org.tinylog:tinylog-impl:2.7.0'
 
     // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
-    implementation 'org.slf4j:jul-to-slf4j:2.0.16'
+    implementation 'org.slf4j:jul-to-slf4j:2.0.17'
     // route all requests to log4j to SLF4J
     implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.24.3'
 
@@ -304,7 +306,7 @@ dependencies {
     implementation 'com.vladsch.flexmark:flexmark:0.64.8'
     implementation 'com.vladsch.flexmark:flexmark-html2md-converter:0.64.8'
 
-    implementation group: 'net.harawata', name: 'appdirs', version: '1.3.0'
+    implementation group: 'net.harawata', name: 'appdirs', version: '1.4.0'
 
     implementation group: 'org.jooq', name: 'jool', version: '0.9.15'
     // JAX-RS implemented by Jersey
@@ -335,7 +337,7 @@ dependencies {
     implementation 'com.github.vatbub:mslinks:1.0.6.2'
 
     // YAML formatting
-    implementation 'org.yaml:snakeyaml:2.3'
+    implementation 'org.yaml:snakeyaml:2.4'
 
     // region AI
     implementation 'dev.langchain4j:langchain4j:0.36.2'
@@ -371,7 +373,7 @@ dependencies {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     }
     // GemxFX also (transitively) depends on kotlin
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.10'
     // endregion
 
     implementation 'commons-io:commons-io:2.18.0'
@@ -380,31 +382,33 @@ dependencies {
     implementation 'io.github.adr:e-adr:2.0.0-SNAPSHOT'
 
     implementation 'io.zonky.test:embedded-postgres:2.1.0'
-    implementation enforcedPlatform('io.zonky.test.postgres:embedded-postgres-binaries-bom:17.2.0')
+    implementation enforcedPlatform('io.zonky.test.postgres:embedded-postgres-binaries-bom:17.4.0')
+    implementation 'io.zonky.test.postgres:embedded-postgres-binaries-darwin-arm64v8'
+    implementation 'io.zonky.test.postgres:embedded-postgres-binaries-linux-arm64v8'
 
     testImplementation 'io.github.classgraph:classgraph:4.8.179'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.11.4'
 
-    testImplementation 'org.mockito:mockito-core:5.15.2'
+    testImplementation 'org.mockito:mockito-core:5.16.0'
     testImplementation 'org.xmlunit:xmlunit-core:2.10.0'
     testImplementation 'org.xmlunit:xmlunit-matchers:2.10.0'
-    testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:1.3.0'
-    testImplementation 'com.tngtech.archunit:archunit-junit5-api:1.3.0'
+    testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:1.4.0'
+    testImplementation 'com.tngtech.archunit:archunit-junit5-api:1.4.0'
     testImplementation "org.testfx:testfx-core:4.0.16-alpha"
     testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
     testImplementation "org.hamcrest:hamcrest-library:3.0"
     testImplementation "com.github.javaparser:javaparser-symbol-solver-core:3.26.3"
 
     // recommended by https://github.com/wiremock/wiremock/issues/2149#issuecomment-1835775954
-    testImplementation 'org.wiremock:wiremock-standalone:3.10.0'
+    testImplementation 'org.wiremock:wiremock-standalone:3.12.1'
 
-    checkstyle 'com.puppycrawl.tools:checkstyle:10.21.1'
+    checkstyle 'com.puppycrawl.tools:checkstyle:10.21.4'
     // xjc needs the runtime as well for the ant task, otherwise it fails
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.0.1"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.2.0"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
